# AgilWebGL

./: readme.md  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: demo.js  ocean.js  primitive.js  test.js
app/src/main/cpp/: AgilV8Android.cpp
app/src/main/cpp/app/: AgilV8App.cpp  AgilV8App.h
app/src/main/cpp/base/: AssetManager.h  native_log.h
app/src/main/cpp/browser/: animationFrame.h  console.h  surface.h  timer.h
app/src/main/cpp/node/: File.cpp  File.h  File_api.h
app/src/main/cpp/v8/: AgilV8Runtime.cpp  AgilV8Runtime.h
app/src/main/cpp/webgl/: glActiveTextureFunc.h  glAttachShaderFunc.h  glBindBufferFunc.h  glBindTextureFunc.h  glBufferDataFunc.h  glClearColorFunc.h  glClearFunc.h  glCompileShaderFunc.h  glCreateBufferFunc.h  glCreateProgramFunc.h  glCreateShaderFunc.h  glCreateTextureFunc.h  glDeleteProgram.h  glDeleteShaderFunc.h  glDrawArraysFunc.h  glEnableFunc.h  glEnableVertexAttribArrayFunc.h  glGenerateMipmapFunc.h  glGetAttribLocationFunc.h  glGetShaderParameterFunc.h  glGetUniformLocationFunc.h  glLinkProgramFunc.h  glShaderSourceFunc.h  glTexImage2DFunc.h  glTexParameteriFunc.h  glUniform1fFunc.h  glUniform1iFunc.h  glUniform2fvFunc.h  glUniform3fvFunc.h  glUseProgramFunc.h  glVertexAttribPointerFunc.h  glViewportFunc.h
app/src/main/java/com/agil/agilv8/: AgilV8Activity.kt  AgilV8App.kt  AgilV8Engine.kt  AgilV8View.kt
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
